Adding commend